# Markr

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  Markr.cpp  Markr.hpp  main.cpp
src/core/: Bookmark.hpp  BookmarkValidator.cpp  BookmarkValidator.hpp  Database.cpp  Database.hpp  Notification.cpp  Notification.hpp  Settings.cpp  Settings.hpp  Subscriber.cpp  Subscriber.hpp
src/interface/: Application.cpp  Application.hpp
src/interface/widgets/: BookmarkAddWidget.cpp  BookmarkAddWidget.hpp  ControlBarWidget.cpp  ControlBarWidget.hpp  EmptyStateWidget.cpp  EmptyStateWidget.hpp  PreferencesWidget.cpp  PreferencesWidget.hpp  RowWidget.cpp  RowWidget.hpp  SearchWidget.cpp  SearchWidget.hpp  TableWidget.cpp  TableWidget.hpp
src/interface/widgets/delegates/: TableWidgetStyledItemDelegate.cpp  TableWidgetStyledItemDelegate.hpp
src/model/: NotEditableDelegate.cpp  NotEditableDelegate.hpp  ProxySqlTableModel.cpp  ProxySqlTableModel.hpp
src/res/: icon.rc  resource.h  resources.qrc  style.qss
